changed about card

--- a/src/app/theme/sass/_dimen.scss
+++ b/src/app/theme/sass/_dimen.scss
@@ -1,6 +1,11 @@
 .np-padding-v-8{
   padding: 8px 0px;
 }
+
+.np-padding-top-16{
+  padding-top: 16px;
+}
+
 .np-padding-bottom-32{
   padding-bottom: 32px;
 }
@@ -8,6 +13,8 @@
 .np-padding-bottom-16{
   padding-bottom: 16px;
 }
+
+
 
 
 .np-margin-top-32{
