--- a/src/app/theme/sass/_text.scss
+++ b/src/app/theme/sass/_text.scss
@@ -29,9 +29,15 @@
 }
 
 
+.np-text-color-white{
+    color: white;
+}
+
 .np-text-align-center{
     text-align: center;
 }
+
+
 
 .np-text-color-instagram{
     color: #D93175
