--- a/src/app/ui/profile/profile.component.html
+++ b/src/app/ui/profile/profile.component.html
@@ -1,85 +1,115 @@
-<div class="np-layout-ribbon back-color-primary"></div>
-<div class="np-layout-content np-layout-overlap-40vh">
-    <div class="profile-card back-color-white" mdl-shadow="2">
+<div class="np-color-grey">
 
-        <div class="mdl-grid profile-card-content">
-            <div class="mdl-cell mdl-cell--3-col-tablet mdl-cell--4-col profile-photo">
-                <img src="assets/img/avatar.jpg">
+    <div class="np-layout-content np-gradient-primary-vertical">
+
+        <div class="about-card np-container-large   np-margin-bottom-64">
+            <div class="about-card-content mdl-grid">
+                <div class="mdl-cell mdl-cell--4-col-phone mdl-cell--3-col-tablet mdl-cell--2-col np-margin-auto">
+                    <!--div class="about-avatar np-flex-container">
+                        <div class="avatar-container np-layout-align-middle">
+                            <img src="assets/img/avatar.jpg">
+                        </div>
+                    </div-->
+                    <div class="about-avatar np-flex-container np-margin-auto">
+                        <div class="avatar-container np-layout-align-middle">
+                            <img src="assets/img/avatar.jpg">
+                        </div>
+                    </div>
+                </div>
+                <div class="mdl-cell mdl-cell--4-col-phone mdl-cell--5-col-tablet mdl-cell--4-col about-info">
+                    <div class=" ">
+                        <div class="about-header np-padding-bottom-16">
+                            <h4 class="np-text-color-white np-font-comfortaa np-font-bolder"><span>Niraj Prakash</span></h4>
+                            <!--h6 class="font-open-sans np-text-shadow "> App &amp; web developer</h6-->
+                            <h6 class="np-text-color-primary-light np-font-open-sans np-font-bold np-font-10"><span class="np-underline-small-primary_all">Android &middot; Website &middot; Server</span></h6>
+                        </div>
+
+                        <div class="about-subheader mdl-color-text--grey-500">
+                            <p>
+                                <mdl-icon class="np-layout-align-middle np-font-12 np-margin-right-12 np-text-color-primary">email</mdl-icon>nirajprakash13@gmail.com</p>
+                            <p>
+                                <mdl-icon class="np-layout-align-middle np-font-12 np-margin-right-12">location_on</mdl-icon>Koramangala, Bangalore, India</p>
+                        </div>
+                        <ul class="social">
+                            <li>
+                                <button mdl-button mdl-button-type="icon">
+                        <i class="icon-linkedin socialicon np-text-color-linkedIn"></i>
+                    </button>
+                            </li>
+                            <li>
+                                <button mdl-button mdl-button-type="icon">
+                        <i class="icon-instagram socialicon np-text-color-instagram"></i>
+                    </button>
+                            </li>
+
+                            <li>
+                                <button mdl-button mdl-button-type="icon">
+                        <i class="icon-facebook socialicon np-text-color-facebook"></i>
+                    </button>
+                            </li>
+                        </ul>
+
+                    </div>
+                </div>
+                <div class="mdl-cell mdl-cell--4-col-phone mdl-cell--8-col-tablet mdl-cell--6-col about-detail">
+                    <p class="np-font-open-sans np-font-12 mdl-color-text--grey-100">Hello! I’m Android App and Web Developer specializing in front-end and back-end development. Experienced
+                        with all stages of the development cycle for dynamic web projects. Well-versed in numerous programming
+                        languages including Java, TypeScript, JavaScript, SQL. Strong background in project management and
+                        implemention.
+                    </p>
+
+                </div>
             </div>
-            <div class="mdl-cell mdl-cell--5-col-tablet mdl-cell--8-col">
-                <div class="profile-info np-text-color-dark">
-                    <h4 class="font-comfortaa font-bolder np-text-shadow">Hey!</h4>
-                    <h4 class="font-comfortaa font-bolder np-text-shadow"><span class="font-light">I'm </span>Niraj Prakash</h4>
-                    <!--h6 class="font-open-sans np-text-shadow"> App &amp; web developer</h6-->
-                    <h6 class="font-open-sans font-bold font-10">Android &middot; Website &middot; Server</h6>
+        </div>
+
+    </div>
+
+
+
+    <div class="service np-color-grey">
+        <div class="title">
+            <h6 class="np-font-comfortaa np-text-shadow np-text-color-dark"><span class="np-underline-small-primary">Education</span></h6>
+        </div>
+        <div class="np-container-large np-padding-bottom-32">
+            <div class="mdl-grid">
+
+                <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
+                    <div class="service-block np-text-color-default np-color-white" mdl-shadow="2">
+                        <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
+                        <span class="service-logo"><i class="icon-mobile socialicon np-text-color-dark np-text-shadow"></i></span>
+                        <h6 class="np-font-comfortaa">
+                            <!--span class="np-font-light">I'm </span-->Android App Development</h6>
+                        <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
+                        <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
+                    </div>
                 </div>
 
-                <div class="profile-detail np-text-color-default">
-                    <p class=""><span class="icon"><i class="material-icons font-20">email</i></span><span class="content">nirajprakash13@gmail.com</span></p>
-                    <p class=""><span class="icon"><i class="material-icons font-20">location_on</i></span><span class="content">Koramangala, Bangalore, India</span></p>
-                    <!--ul>
-                        <li>
-                            <span class="title"><i class="material-icons">email</i></span>
-                            <span class="content">nirajprakash13@gmail.com</span>
-                        </li>
-                        <li>
-                            <span class="title"><i class="material-icons">phone</i></span>
-                            <span class="content">+91 8217 862 643</span>
-                        </li>
-                        <li>
-                            <span class="title"><i class="material-icons">location_on</i></span>
-                            <span class="content">Koramangala, Bangalore, India</span>
-                        </li>
-                    </ul-->
+                <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
+                    <div class="service-block np-text-color-default np-color-white" mdl-shadow="2">
+                        <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
+                        <span class="service-logo"><i class="icon-code socialicon np-text-color-dark np-text-shadow"></i></span>
+                        <h6 class="np-font-comfortaa">
+                            <!--span class="np-font-light">I'm </span-->Web Development</h6>
+                        <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
+                        <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
+
+                    </div>
                 </div>
+
+
+                <div class="service-list-item mdl-cell mdl-cell--8-col-tablet mdl-cell--4-col">
+                    <div class="service-block np-text-color-default np-color-white" mdl-shadow="2">
+                        <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
+                        <span class="service-logo"><i class="icon-server socialicon np-text-color-dark np-text-shadow"></i></span>
+                        <h6 class="np-font-comfortaa">
+                            <!--span class="np-font-light">I'm </span-->Backend Development</h6>
+                        <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
+                        <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
+                    </div>
+                </div>
+
             </div>
         </div>
-        <div class="profile-bottom np-layout-primary">
-            <ul class="social">
-                <li>
-                    <button mdl-button mdl-button-type="icon">
-                        <i class="icon-github-circled socialicon white"></i>
-                    </button>
-                </li>
-                <li>
-                    <button mdl-button mdl-button-type="icon">
-                        <i class="icon-bitbucket socialicon white"></i>
-                    </button>
-                </li>
-                <li>
-                    <button mdl-button mdl-button-type="icon">
-                        <i class="icon-linkedin socialicon white"></i>
-                    </button>
-                </li>
-                <li>
-                    <button mdl-button mdl-button-type="icon">
-                        <i class="icon-instagram socialicon white"></i>
-                    </button>
-                </li>
-                <li>
-                    <button mdl-button mdl-button-type="icon">
-                        <i class="icon-behance socialicon white"></i>
-                    </button>
-                </li>
-            </ul>
-        </div>
     </div>
-    <div class="np-padding-v-8 np-margin-top-32">
-        <div class="profile-sub-card" mdl-shadow="2">
 
-            <div class="profile-action font-open-sans">
-                <button mdl-button mdl-button-type="raised" mdl-colored="primary" mdl-ripple>
-    <span class="font-open-sans font-12">See Portfolio</span>
-  </button>
-
-                <button mdl-button mdl-colored="primary" mdl-ripple>
-    <span class="font-open-sans font-12 font-bold">Download CV</span>
-  </button>
-            </div>
-            <p class="font-open-sans font-14">Hello! I’m Robert Smith. Senior Web Developer specializing in front end development. Experienced with all stages
-                of the development cycle for dynamic web projects. Well-versed in numerous programming languages including
-                JavaScript, SQL, and C. Stng background in project management and customer relations.</p>
-
-        </div>
-    </div>
 </div>
