adding project section

--- a/src/app/theme/sass/_dimen.scss
+++ b/src/app/theme/sass/_dimen.scss
@@ -14,6 +14,14 @@
   padding-bottom: 16px;
 }
 
+.np-padding-bottom-8{
+  padding-bottom: 8px;
+}
+
+.np-padding-bottom-4{
+  padding-bottom: 4px;
+}
+
 
 
 
@@ -24,6 +32,12 @@
 .np-margin-bottom-64{
   margin-bottom: 64px;
 }
+
+.np-margin-bottom-40{
+  margin-bottom: 40px;
+}
+
+
 .np-margin-bottom-20{
   margin-bottom: 20px;
 }
