--- a/src/app/theme/sass/_layout.scss
+++ b/src/app/theme/sass/_layout.scss
@@ -50,6 +50,11 @@ width: 100%;
   
 }
 
+.np-flex-align-vertical-middle{
+
+  vertical-align: middle;
+}
+
 .np-layout-align-middle{
   vertical-align: middle;
 }
