--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -1,15 +1,15 @@
 <div class="np-color-grey">
 
-    <div class="np-layout-content np-gradient-primary-vertical">
+    <!--div class="np-layout-content np-gradient-primary-vertical">
 
-        <div class="about-card np-container-large   np-margin-bottom-64">
+        <div class="about-card np-container-large   np-margin-bottom-40">
             <div class="about-card-content mdl-grid">
                 <div class="mdl-cell mdl-cell--4-col-phone mdl-cell--2-col-tablet mdl-cell--3-col">
-                    <!--div class="about-avatar np-flex-container">
+                    <-div class="about-avatar np-flex-container">
                         <div class="avatar-container np-layout-align-middle">
                             <img src="assets/img/avatar.jpg">
                         </div>
-                    </div-->
+                    </div->
                     <div class="about-avatar np-flex-container">
                         <div class="avatar-container np-margin-auto-horizontal">
                             <img src="assets/img/avatar.jpg">
@@ -20,7 +20,7 @@
                     <div class=" ">
                         <div class="about-header np-padding-bottom-16">
                             <h4 class="np-text-color-white np-font-comfortaa np-font-light"><span>Niraj Prakash</span></h4>
-                            <!--h6 class="font-open-sans np-text-shadow "> App &amp; web developer</h6-->
+                            <-h6 class="font-open-sans np-text-shadow "> App &amp; web developer</h6->
                             <h6 class="np-text-color-primary-light np-font-open-sans np-font-bold np-font-10"><span class="np-underline-small-primary_all">Android &middot; Website &middot; Server</span></h6>
                         </div>
 
@@ -62,8 +62,15 @@
             </div>
         </div>
 
-    </div>
+    </div-->
 
+<div class="np-layout-content">
+    <div class="np-container-large">
+        <np-project-view></np-project-view>
+
+
+    </div>
+</div>
 
 
 
