--- a/src/app/theme/sass/draw/_border.scss
+++ b/src/app/theme/sass/draw/_border.scss
@@ -3,8 +3,6 @@
 }
 
 .np-shadow-inner{
-    -webkit-box-shadow: inset 0px -10px 37px -1px rgba(0,0,0,0.13);
-    -moz-box-shadow: inset 0px -10px 37px -1px rgba(0,0,0,0.13);
     box-shadow: inset 0px -10px 37px -1px rgba(0,0,0,0.13);
 }
 
@@ -15,4 +13,16 @@
 
 .np-shadow-decent{
     box-shadow: 2px 4px 20px 0px rgba(0,0,00,0.3);
+}
+.np-shadow-card{
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
+    
+}
+
+.np-border-4{
+    border-radius: 4px;
+}
+
+.np-border-2{
+    border-radius: 2px;
 }
