--- a/src/app/theme/theme.scss
+++ b/src/app/theme/theme.scss
@@ -3,6 +3,7 @@
 @import "sass/draw/_border";
 @import "sass/draw/_selector";
 @import "sass/draw/_others";
+@import "sass/anim/hover";
 @import "sass/_color";
 @import "sass/_layout";
 @import "sass/_dimen";
