--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,14 +2,14 @@
 
 @import "~@angular-mdl/core/scss/color-definitions";
 
-$color-primary: $palette-purple-500;
+$color-primary: $palette-blue-grey-500;
 //$color-primary: $palette-grey-50;
-$color-primary-dark: $palette-purple-700;
-$color-accent: $palette-green-A200;
+$color-primary-dark: $palette-blue-grey-700;
+$color-accent: $palette-teal-A700;
 $color-primary-contrast: $color-dark-contrast;
 $color-accent-contrast: $color-dark-contrast;
 
-$np-color-primary-50: unquote("rgb(#{$palette-purple-50})") !default;
+$np-color-primary-50: unquote("rgb(#{$palette-blue-grey-100})") !default;
 $np-color-back-grey:  unquote("rgb(#{$palette-grey-50})");
 @import '~@angular-mdl/core/scss/material-design-lite';
 
