completed about section

--- a/src/app/theme/sass/_dimen.scss
+++ b/src/app/theme/sass/_dimen.scss
@@ -21,6 +21,9 @@
 .np-padding-bottom-4{
   padding-bottom: 4px;
 }
+.np-padding-bottom-2{
+  padding-bottom: 2px;
+}
 
 
 
@@ -40,6 +43,19 @@
 
 .np-margin-bottom-20{
   margin-bottom: 20px;
+}
+
+.np-margin-bottom-12{
+  margin-bottom: 12px;
+}
+
+
+.np-margin-bottom-8{
+  margin-bottom: 8px;
+}
+
+.np-margin-bottom-4{
+  margin-bottom: 4px;
 }
 
 .np-margin-right-24{
