--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -1,15 +1,15 @@
 <div class="np-color-grey">
 
-    <!--div class="np-layout-content np-gradient-primary-vertical">
+    <div class="np-layout-content np-gradient-primary-vertical">
 
-        <div class="about-card np-container-large   np-margin-bottom-40">
+        <div class="about-card np-container-large np-margin-bottom-12">
             <div class="about-card-content mdl-grid">
                 <div class="mdl-cell mdl-cell--4-col-phone mdl-cell--2-col-tablet mdl-cell--3-col">
-                    <-div class="about-avatar np-flex-container">
+                    <!--div class="about-avatar np-flex-container">
                         <div class="avatar-container np-layout-align-middle">
                             <img src="assets/img/avatar.jpg">
                         </div>
-                    </div->
+                    </div-->
                     <div class="about-avatar np-flex-container">
                         <div class="avatar-container np-margin-auto-horizontal">
                             <img src="assets/img/avatar.jpg">
@@ -20,7 +20,7 @@
                     <div class=" ">
                         <div class="about-header np-padding-bottom-16">
                             <h4 class="np-text-color-white np-font-comfortaa np-font-light"><span>Niraj Prakash</span></h4>
-                            <-h6 class="font-open-sans np-text-shadow "> App &amp; web developer</h6->
+                            <!--h6 class="font-open-sans np-text-shadow "> App &amp; web developer</h6-->
                             <h6 class="np-text-color-primary-light np-font-open-sans np-font-bold np-font-10"><span class="np-underline-small-primary_all">Android &middot; Website &middot; Server</span></h6>
                         </div>
 
@@ -62,17 +62,50 @@
             </div>
         </div>
 
-    </div-->
-
-<div class="np-layout-content">
-    <div class="np-container-large">
-        <np-project-view></np-project-view>
-
-
     </div>
-</div>
+
+    <div class="np-layout-content">
+
+        <div class="np-container-large">
+            <div class="np-border-2 np-hover-card-up info-card np-color-white">
+                <div class="info-items">
+                    <div class="info-work np-flex-container np-margin-bottom-20">
+                        <div class="tag"><p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">Works:</p></div>
+                        <div class="value np-font-open-sans mdl-color-text--grey-500">
+                            <p class="np-padding-bottom-4">Freelancer from 2017</p>
+                            <p>Formar Android and web developer at <span class="np-text-color-primary">Fancymonk 2015-2016</span></p>
+                        </div>
+                    </div>
+                    <div class="info-alma-matter np-flex-container np-margin-bottom-4">
+                        
+                        <div class="tag"><p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">Alma Matter:</p></div>
+                        <div class="value np-font-open-sans mdl-color-text--grey-500">
+                            <p class="np-text-color-primary np-padding-bottom-4">IIT Kharagpur (B. Tech.)</p>
+                        </div>
+                    </div>
+                    <div class="info-school np-flex-container np-margin-bottom-12">
+                        
+                        <div class="tag"><p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">School:</p></div>
+                        <div class="value np-font-open-sans mdl-color-text--grey-500">
+                            <p class="np-padding-bottom-4">Bal Vidya Niketan <span class="np-text-color-primary">class of 2010</span> </p>
+                        </div>
+                    </div>
+                    <div class="info-hobby np-flex-container">
+                        <div class="tag"><p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">Hobbies:</p></div>
+                        <div class="value np-font-open-sans mdl-color-text--grey-500">
+                            <p>PC Gaming, Sketching</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
 
 
 
+            <np-project-view></np-project-view>
+
+
+        </div>
+    </div>
 
 </div>
