--- a/src/app/ui/about/about.component.scss
+++ b/src/app/ui/about/about.component.scss
@@ -3,7 +3,7 @@
 .about-card{
     padding: 0;
     width: 100%;
-    margin: 0 auto 64px;
+    margin: 0 auto;
     flex-shrink: 0;
     
     .about-card-content{
@@ -16,6 +16,8 @@
             max-width: 104px;
             height: auto;
             border-radius: 100%;
+            box-shadow: 0px 4px 8px 1px rgba(0,0,0,0.14), 
+            0px 0px 11px 1px rgba(0,0,0,0.12);
         }
     }
 
@@ -27,7 +29,7 @@
             line-height: 1.1;
         }
         p{
-            font-size:10px;
+            font-size:12px;
         }
     }
 
@@ -70,6 +72,42 @@
 
 }
 
+
+.info-card{
+    padding: 20px;
+    .info-items{
+
+        .tag{
+            min-width: 200px;
+        }
+        p{
+            font-size: 12px;
+            margin: 0;
+            line-height: 1.3;
+        }
+
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .info-card{
+        padding: 20px;
+
+        .info-items{
+
+            .tag{
+                min-width: 80px;
+            }
+            p{
+                font-size: 10px;
+                margin: 0;
+                line-height: 1.3;
+            }
+
+        }
+    }
+
+}
 
 
 
