--- a/src/app/ui/about/project.component.html
+++ b/src/app/ui/about/project.component.html
@@ -1,53 +1,21 @@
 <div class="project">
     <div class="title">
-        <h6 class="np-font-comfortaa np-text-shadow np-text-color-dark"><span class="np-underline-small-primary">Technologies</span></h6>
+        <h6 class="np-font-comfortaa np-text-shadow np-text-color-dark"><span class="np-underline-small-primary">Projects</span></h6>
     </div>
-
-
-    <div class="np-hover-card-up np-border-2 np-color-white card-project np-shadow-card">
+    <div class="np-hover-card-up np-border-2 np-color-white card-project np-shadow-card"  *ngFor="let project of _mProjectList; let i = index">
         <div class="project-heading np-flex-container np-flex-align-vertical-middle">
             <div class="avatar-container">
-                <img src="assets/img/hapi.png" />
+                <img src="{{project.logo}}" />
             </div>
             <div class="np-margin-auto-vertical">
-                <h4 class="project-title np-font-open-sans mdl-color-text--grey-900"><span class="np-padding-bottom-4 np-underline-small-primary_start_no_padding">EEG interface jarter sasdfrt ddsjjtl kvkl</span></h4>
-                <!--h6 class="project-subtitle np-font-open-sans np-text-color-primary np-font-10">Akety esew qwede isk.</h6-->
+                <h4 class="project-title np-font-open-sans mdl-color-text--grey-900 np-padding-bottom-4">{{project.name}}</h4>
+                <h6 class="project-subtitle np-font-open-sans np-text-color-primary"><span class="np-padding-bottom-2 np-underline-small-thin-primary_start_no_padding">{{project.info}}</span></h6>
             </div>
         </div>
         <div class="project-detail">
-            <p class="np-font-open-sans mdl-color-text--grey-600">swwhgu ngwd jhdwbgdw yugdwyudwb byugyuw bbyugduywg byuuydgwyuwd jygdwbbdwyudwbdwb dwydwbb</p>
+            <p class="np-font-open-sans mdl-color-text--grey-600" *ngFor="let projectdetail of project.detail; let j=index">{{projectdetail}}</p>
         </div>
 
     </div>
-
-    <div class="np-hover-card-up np-border-2 np-color-white card-project np-shadow-card">
-        <div class="project-heading np-flex-container np-flex-align-vertical-middle">
-            <div class="avatar-container">
-                <img src="assets/img/hapi.png" />
-            </div>
-            <div class="np-margin-auto-vertical">
-                <h4 class="project-title np-font-open-sans mdl-color-text--grey-900"><span class="np-padding-bottom-4 np-underline-small-primary_start_no_padding">EEG interface jarter sasdfrt ddsjjtl kvkl</span></h4>
-                <!--h6 class="project-subtitle np-font-open-sans np-text-color-primary np-font-10">Akety esew qwede isk.</h6-->
-            </div>
-        </div>
-        <div class="project-detail">
-            <p class="np-font-open-sans mdl-color-text--grey-600">swwhgu ngwd jhdwbgdw yugdwyudwb byugyuw bbyugduywg byuuydgwyuwd jygdwbbdwyudwbdwb dwydwbb</p>
-        </div>
-
-    </div>
-    <div class="np-hover-card-up np-border-2 np-color-white card-project np-shadow-card">
-        <div class="project-heading np-flex-container np-flex-align-vertical-middle">
-            <div class="avatar-container">
-                <img src="assets/img/hapi.png" />
-            </div>
-            <div class="np-margin-auto-vertical">
-                <h4 class="project-title np-font-open-sans mdl-color-text--grey-900"><span class="np-padding-bottom-4 np-underline-small-primary_start_no_padding">EEG interface jarter sasdfrt ddsjjtl kvkl</span></h4>
-                <!--h6 class="project-subtitle np-font-open-sans np-text-color-primary np-font-10">Akety esew qwede isk.</h6-->
-            </div>
-        </div>
-        <div class="project-detail">
-            <p class="np-font-open-sans mdl-color-text--grey-600">swwhgu ngwd jhdwbgdw yugdwyudwb byugyuw bbyugduywg byuuydgwyuwd jygdwbbdwyudwbdwb dwydwbb</p>
-        </div>
-
-    </div>
+  
 </div>
