--- a/src/app/ui/about/project.component.scss
+++ b/src/app/ui/about/project.component.scss
@@ -22,6 +22,11 @@
                 margin: 0;
                 line-height: 1.1;
             }
+            h6{
+                font-size: 10px;
+                margin: 0;
+                line-height: 1.1;
+            }
 
         }
         .project-detail{
@@ -29,6 +34,8 @@
             padding-left: 68px;
             p{
                 font-size:12px;
+                line-height: 1.4;
+                margin: 0;
             }
         }
     }
