redesign home services section

--- a/src/app/theme/sass/_dimen.scss
+++ b/src/app/theme/sass/_dimen.scss
@@ -2,6 +2,10 @@
   padding: 8px 0px;
 }
 
+.np-padding-16{
+  padding: 16px;
+}
+
 .np-padding-top-16{
   padding-top: 16px;
 }
@@ -43,6 +47,11 @@
 
 .np-margin-bottom-20{
   margin-bottom: 20px;
+}
+
+
+.np-margin-bottom-16{
+  margin-bottom: 16px;
 }
 
 .np-margin-bottom-12{
