--- a/src/app/theme/sass/_text.scss
+++ b/src/app/theme/sass/_text.scss
@@ -29,6 +29,16 @@
 }
 
 
+.np-text-color-grey-dark-extra{
+    color: $np-color-grey-dark-extra;
+}
+
+
+.np-text-color-grey-dark{
+    color: $np-color-grey-dark;
+}
+
+
 .np-text-color-white{
     color: white;
 }
