--- a/src/app/ui/about/about.component.html
+++ b/src/app/ui/about/about.component.html
@@ -73,7 +73,7 @@
                         <div class="tag"><p class="np-font-open-sans np-font-bold mdl-color-text--grey-800">Works:</p></div>
                         <div class="value np-font-open-sans mdl-color-text--grey-500">
                             <p class="np-padding-bottom-4">Freelancer from 2017</p>
-                            <p>Formar Android and web developer at <span class="np-text-color-primary">Fancymonk 2015-2016</span></p>
+                            <p>Former Android and web developer at <span class="np-text-color-primary">Fancymonk 2015-2016</span></p>
                         </div>
                     </div>
                     <div class="info-alma-matter np-flex-container np-margin-bottom-4">
