--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -65,41 +65,34 @@
         <div class="title">
             <h6 class="np-font-comfortaa np-text-shadow np-text-color-dark"><span class="np-underline-small-primary">Services</span></h6>
         </div>
-        <div class="np-container np-padding-bottom-32">
+        <div class="np-container-large np-padding-bottom-32">
             <div class="mdl-grid">
 
                 <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
-                    <div class="service-block np-text-color-default np-color-white" mdl-shadow="2">
-                        <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
-                        <span class="service-logo"><i class="icon-mobile socialicon np-text-color-dark np-text-shadow"></i></span>
-                        <h6 class="np-font-comfortaa">
-                            <!--span class="np-font-light">I'm </span-->Android App Development</h6>
-                        <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
-                        <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
+                    <div class="service-block np-padding-16 np-text-color-default np-hover-change-to-primary np-hover-up">
+                        <div class="service-logo np-margin-bottom-16"><i class="icon-mobile socialicon np-text-color-primary np-font-24 np-text-shadow"></i></div>
+                        <h6 class="np-font-comfortaa np-font-bold np-font-12 np-text-color-grey-dark-extra">Android App Development</h6>
+                        <p class="np-font-open-sans np-font-bold">Hybrid/Native App, Backward Support upto v4.1</p>
+                        <!--button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button-->
                     </div>
                 </div>
 
                 <div class="service-list-item mdl-cell mdl-cell--4-col-tablet mdl-cell--4-col">
-                    <div class="service-block np-text-color-default np-color-white" mdl-shadow="2">
-                        <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
-                        <span class="service-logo"><i class="icon-code socialicon np-text-color-dark np-text-shadow"></i></span>
-                        <h6 class="np-font-comfortaa">
-                            <!--span class="np-font-light">I'm </span-->Web Development</h6>
-                        <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
-                        <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
-
+                    <div class="service-block np-padding-16 np-text-color-default np-hover-change-to-primary np-hover-up">
+                        <div class="service-logo np-margin-bottom-16"><i class="icon-code socialicon np-text-color-primary np-font-24 np-text-shadow"></i></div>
+                        <h6 class="np-font-comfortaa np-font-bold np-font-12 np-text-color-grey-dark-extra">Web Development</h6>
+                        <p class="np-font-open-sans np-font-bold">Responsive Web Design, Multi-platform Support</p>
+                        <!--button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button-->
                     </div>
                 </div>
 
 
                 <div class="service-list-item mdl-cell mdl-cell--8-col-tablet mdl-cell--4-col">
-                    <div class="service-block np-text-color-default np-color-white" mdl-shadow="2">
-                        <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
-                        <span class="service-logo"><i class="icon-server socialicon np-text-color-dark np-text-shadow"></i></span>
-                        <h6 class="np-font-comfortaa">
-                            <!--span class="np-font-light">I'm </span-->Backend Development</h6>
-                        <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
-                        <button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button>
+                    <div class="service-block np-padding-16 np-text-color-default np-hover-change-to-primary np-hover-up">
+                        <div class="service-logo np-margin-bottom-16"><i class="icon-server socialicon np-text-color-primary np-font-24 np-text-shadow"></i></div>
+                        <h6 class="np-font-comfortaa np-font-bold np-font-12 np-text-color-grey-dark-extra">Backend Development</h6>
+                        <p class="np-font-open-sans np-font-bold">Web Servers, Databases, APIs and services</p>
+                        <!--button mdl-button mdl-button-type="icon" mdl-colored="primary"><mdl-icon>trending_flat</mdl-icon></button-->
                     </div>
                 </div>
 
