--- a/src/app/ui/home/technology.component.html
+++ b/src/app/ui/home/technology.component.html
@@ -28,7 +28,9 @@
       </mdl-tab-panel-content>
     </mdl-tab-panel>
     <mdl-tab-panel>
-      <mdl-tab-panel-title class="np-font-comfortaa np-font-bold np-font-tab">Back End/Services</mdl-tab-panel-title>
+      <mdl-tab-panel-title class="np-font-comfortaa np-font-bold np-font-tab">
+        Back End
+        </mdl-tab-panel-title>
       <mdl-tab-panel-content>
         <div class="np-padding-bottom-32">
           <div class="mdl-grid">
@@ -48,7 +50,9 @@
       </mdl-tab-panel-content>
     </mdl-tab-panel>
     <mdl-tab-panel>
-      <mdl-tab-panel-title class="np-font-comfortaa np-font-bold np-font-tab">Design</mdl-tab-panel-title>
+      <mdl-tab-panel-title class="np-font-comfortaa np-font-bold np-font-tab">
+        Design
+      </mdl-tab-panel-title>
       <mdl-tab-panel-content>
         <div class="np-padding-bottom-32">
           <div class="mdl-grid">
