--- a/src/app/theme/sass/anim/hover.scss
+++ b/src/app/theme/sass/anim/hover.scss
@@ -1,7 +1,34 @@
 .np-hover-card-up{
-     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     &:hover{
         box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    }
+}
+
+.np-hover-up{
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    &:hover{
+        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    }
+}
+
+.np-hover-change-to-primary{
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+   
+    &:hover{
+        color: white;
+        background: $np-color-primary;
+        h1,h2,h3,h4,h5,h6,p{
+            color: $np-color-primary-50;
+        }
+    }
+}
+
+.np-hover-text-color-primary{
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    color: $np-color-primary;
+    &:hover{
+        color:$np-color-primary-50;
     }
 }
