--- a/src/app/ui/home/home.component.scss
+++ b/src/app/ui/home/home.component.scss
@@ -209,11 +209,7 @@
         text-align: center;
         max-width: 212px;
         margin: 4px auto;
-           
-        .socialicon{
-            margin: 20px 0 18px 0;
-            font-size: 24px;
-        }
+        transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 
         button{
             margin: 14px 0 16px 0;
@@ -226,21 +222,24 @@
         
 
         h6{
-            font-size: 12px;
-            margin: 0 10px 0;
+          margin: 0 0 8px 0;
             line-height: 1.2;
         }
 
         p{
+          margin: 0;
+            line-height: 1.3;
             font-size:10px;
         }
 
-       /* &:hover{
-            background:rgba(255,255,255,1);
-            border-radius: 2px;
-            color: rgba(0,0,0,0.54);
-            box-shadow: 0 2px 4px rgba(0,0,0,0.15);
-        }*/
+       &:hover{
+            .service-logo{
+              .socialicon{
+                color: white;
+              }
+            }
+            
+        }
 
     }
 
