--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,8 @@ $color-accent-contrast: $color-dark-contrast;
 
 $np-color-primary-50: unquote("rgb(#{$palette-blue-grey-100})") !default;
 $np-color-back-grey:  unquote("rgb(#{$palette-grey-50})");
+$np-color-back-grey-dark: unquote("rgb(#{$palette-grey-700})");
+$np-color-back-grey-dark-extra: unquote("rgb(#{$palette-grey-800})");
 @import '~@angular-mdl/core/scss/material-design-lite';
 
 @import '~@angular-mdl/popover/popover';
