--- a/src/app/theme/sass/_layout.scss
+++ b/src/app/theme/sass/_layout.scss
@@ -50,6 +50,13 @@ width: 100%;
   
 }
 
+.np-flex-align-center{
+  align-items: center;
+}
+.np-flex-justify-content{
+  justify-content: center;
+}
+
 .np-flex-align-vertical-middle{
 
   vertical-align: middle;
