--- a/src/app/ui/portfolio/portfolio.component.scss
+++ b/src/app/ui/portfolio/portfolio.component.scss
@@ -3,6 +3,7 @@
  *                         SERVICE
  */
 
+/*
 div {
   background: #e6ecee;
   display: -webkit-box;
@@ -17,7 +18,11 @@ div {
       -ms-flex-pack: center;
           justify-content: center;
 }
-code {
+*/
+
+
+
+/*code {
   max-width: 20rem;
   background: #263238;
   color: #eff;
@@ -34,6 +39,7 @@ code {
 code:focus {
   background: #2e3d44;
 }
+
 code p {
   position: relative;
   margin: 0.2rem;
@@ -55,4 +61,5 @@ code p::before {
 }
 code p:focus::before {
   color: #f00;
-}
+}*/
+
