--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,54 +1,13 @@
 <div class="np-color-grey">
+
+    
     <div class="np-layout-content">
-        <div class="profile np-container np-color-white" mdl-shadow="2">
-
-            <div class="mdl-grid profile-content">
-
-                <div class="mdl-cell mdl-cell--6-col-tablet mdl-cell--4-col">
-                    <div class="profile-info np-text-color-dark">
-                        <!--h4 class="np-font-comfortaa np-font-bolder np-text-shadow">Hey!</h4-->
-                        <h4 class="np-font-comfortaa np-font-bolder np-text-shadow">
-                            <!--span class="np-font-light">I'm </span-->Niraj Prakash</h4>
-                        <!--h6 class="np-font-open-sans np-text-shadow"> App &amp; web developer</h6-->
-                        <h6 class="np-font-open-sans np-font-bold np-font-10">Android &amp; Full Stack Developer</h6>
-                    </div>
-                </div>
-                <div class="profile-detail mdl-cell mdl-cell--12-col">
-
-                    <p class="np-text-color-default np-font-open-sans np-font-14">Hello! I’m Niraj Prakash. Senior Web Developer specializing in front end development. Experienced with
-                        all stages of the development cycle for dynamic web projects. Well-versed in numerous programming
-                        languages including JavaScript, SQL, and C. Stng background in project management and customer relations.</p>
-                </div>
-            </div>
-            <div class="profile-bottom np-layout-primary">
-                <ul class="social">
-                    <li>
-                        <button mdl-button mdl-button-type="icon">
-                        <i class="icon-github-circled socialicon white"></i>
-                    </button>
-                    </li>
-                    <li>
-                        <button mdl-button mdl-button-type="icon">
-                        <i class="icon-bitbucket socialicon white"></i>
-                    </button>
-                    </li>
-                    <li>
-                        <button mdl-button mdl-button-type="icon">
-                        <i class="icon-linkedin socialicon white"></i>
-                    </button>
-                    </li>
-                    <li>
-                        <button mdl-button mdl-button-type="icon">
-                        <i class="icon-instagram socialicon white"></i>
-                    </button>
-                    </li>
-                    <li>
-                        <button mdl-button mdl-button-type="icon">
-                        <i class="icon-behance socialicon white"></i>
-                    </button>
-                    </li>
-                </ul>
-            </div>
+        <div class="code np-flex-container np-flex-align-center np-flex-justify-content">
+            <code class="np-color-white np-hover-card-up" contentEditable="true">
+                <p>function <span class="function">hello</span>() {{ '{' }}</p>
+                <p>  Log.<span class="function">v</span>("hello", "Visitor");</p>
+                <p>{{ '}' }}</p>
+            </code>
         </div>
     </div>
     <div class="np-padding-v-8 np-margin-top-32">
@@ -101,7 +60,7 @@
     </div>
 
     <div class="np-container-large">
-    <np-technology-view></np-technology-view>
+        <np-technology-view></np-technology-view>
     </div>
     <footer class="mdl-color--white">
         <div class="footer-content np-flex-container ">
