--- a/src/app/ui/home/home.component.scss
+++ b/src/app/ui/home/home.component.scss
@@ -8,85 +8,15 @@
 }
 */
 
-.profile{
-/*
- max-width: 900px;
-  padding: 0;
-  width: 100%;
-  margin: 0 auto;
-  flex-shrink: 0;
-  */
-  .profile-content{
-    padding: 57px 50px 15px 50px;
-  }
-  .profile-photo {
-      padding-right: 5%;
-      margin-bottom: 10px;
-  }
-
-  .profile-photo img{
-    width: 100%;
-    display: block;
-  }
-
-  .profile-info{
-    color: #3d4451;
-    padding-bottom: 12px;
-    margin-bottom: 25px;
-    border-bottom: 1px solid #dedede;
-
-    h4,h6{
-      margin: 0;
-      line-height: 1.2;
-    }
-    p{
-      font-size:10px;
-    }
-  }
-  .profile-detail{
-    p{
-      margin: 5px 0px 5px 0px;
-      .icon{
-        float: left;
-        font-size: 20px;
-        line-height: 1.1;
-      }
-      
-      .content{
-        margin-left: 8px;
-        font-size: 15px;
-        font-weight: 400;
-        line-height: 1.2;
-      } 
-    }
-
-  }
-  
+.code{
+  min-height: 300px;
 }
 
-
-@media (max-width: 992px) {
+@media (max-width: 500px) {
   
-  .profile {
-    .profile-content {
-      padding: 50px 40px 15px 40px; 
-    }
-    .profile-photo {
-      padding-right: 0;
-      margin-bottom: 30px; 
-    } 
-  }
+.code{
+  min-height: 300px;
 }
-@media (max-width: 767px) {
- .profile{
-   .section-about {
-      padding-top: 0; 
-    }
-
-    .profile-content {
-        padding: 30px 20px 15px 20px; 
-    }
- }
 }
 
 .profile-action{
